[gd_scene load_steps=28 format=2]

[ext_resource path="res://addons/gamelevels_blueprint/ui/dock_graph_edit.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/gamelevels_blueprint/ui/form_scene_data.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/gamelevels_blueprint/ui/label_tooltip_link_mode.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/gamelevels_blueprint/ui/dock.gd" type="Script" id=4]
[ext_resource path="res://addons/gamelevels_blueprint/icons/open-folder-svgrepo-com.svg" type="Texture" id=5]
[ext_resource path="res://addons/gamelevels_blueprint/icons/save-svgrepo-com.svg" type="Texture" id=6]
[ext_resource path="res://addons/gamelevels_blueprint/icons/close-svgrepo-com.svg" type="Texture" id=7]
[ext_resource path="res://addons/gamelevels_blueprint/icons/help-svgrepo-com.svg" type="Texture" id=8]
[ext_resource path="res://addons/gamelevels_blueprint/icons/link-svgrepo-com.svg" type="Texture" id=9]
[ext_resource path="res://addons/gamelevels_blueprint/icons/file-info-svgrepo-com.svg" type="Texture" id=10]
[ext_resource path="res://addons/gamelevels_blueprint/tres/font_regular.tres" type="DynamicFont" id=11]
[ext_resource path="res://addons/gamelevels_blueprint/tres/font_bold_big.tres" type="DynamicFont" id=12]
[ext_resource path="res://addons/gamelevels_blueprint/icons/external-link-svgrepo-com.svg" type="Texture" id=13]
[ext_resource path="res://addons/gamelevels_blueprint/icons/github-svgrepo-com.svg" type="Texture" id=14]
[ext_resource path="res://addons/gamelevels_blueprint/icons/ko-fi-svgrepo-com.svg" type="Texture" id=15]
[ext_resource path="res://addons/gamelevels_blueprint/icons/time.png" type="Texture" id=16]

[sub_resource type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.254902, 0.572549, 0.419608 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.619608 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0980392, 0.0941176, 0.152941, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Dock" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 5 )
script = ExtResource( 4 )

[node name="BG" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.819608 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.12549, 0.188235, 1 )

[node name="PanelToolBar" type="PanelContainer" parent="."]
anchor_right = 1.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelToolBar"]
margin_right = 1024.0
margin_bottom = 32.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="HBx" type="HBoxContainer" parent="PanelToolBar/MarginContainer"]
margin_left = 10.0
margin_right = 1014.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="HBxMapFile" type="HBoxContainer" parent="PanelToolBar/MarginContainer/HBx"]
margin_right = 205.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="BtnAbout" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxMapFile"]
margin_right = 36.0
margin_bottom = 32.0
hint_tooltip = "About GameLevels Blueprint"
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 8 )
flat = true

[node name="BtnOpenRecentFiles" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxMapFile"]
unique_name_in_owner = true
margin_left = 46.0
margin_right = 82.0
margin_bottom = 32.0
rect_min_size = Vector2( 36, 32 )
hint_tooltip = "Show Recent Files list"
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 16 )
flat = true
expand_icon = true

[node name="BtnOpen" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxMapFile"]
margin_left = 92.0
margin_right = 123.0
margin_bottom = 32.0
hint_tooltip = "Open Map file"
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 5 )
flat = true

[node name="BtnSave" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxMapFile"]
margin_left = 133.0
margin_right = 165.0
margin_bottom = 32.0
hint_tooltip = "Save Map"
custom_styles/focus = SubResource( 3 )
icon = ExtResource( 6 )
flat = true

[node name="BtnClose" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxMapFile"]
margin_left = 175.0
margin_right = 205.0
margin_bottom = 32.0
hint_tooltip = "Close opened Map"
custom_styles/focus = SubResource( 4 )
icon = ExtResource( 7 )
flat = true

[node name="LabelMsgs" type="Label" parent="PanelToolBar/MarginContainer/HBx"]
margin_left = 215.0
margin_right = 957.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
valign = 1
clip_text = true
max_lines_visible = 1

[node name="HBxActions" type="HBoxContainer" parent="PanelToolBar/MarginContainer/HBx"]
margin_left = 967.0
margin_right = 1004.0
margin_bottom = 32.0
custom_constants/separation = 10
alignment = 2

[node name="BtnLink" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxActions"]
margin_right = 37.0
margin_bottom = 32.0
hint_tooltip = "Make a connection between rooms"
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 9 )
flat = true

[node name="BtnCancelLink" type="Button" parent="PanelToolBar/MarginContainer/HBx/HBxActions"]
visible = false
margin_left = 47.0
margin_right = 77.0
margin_bottom = 32.0
hint_tooltip = "Cancel Link action"
custom_styles/focus = SubResource( 2 )
text = " Cancel Connection Mode"
icon = ExtResource( 7 )
flat = true

[node name="GraphEdit" parent="." instance=ExtResource( 1 )]
margin_top = 32.0

[node name="PanelFileMapNameOpened" type="PanelContainer" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -162.0
margin_top = 36.0
margin_right = -14.0
margin_bottom = 70.0
grow_horizontal = 0
custom_styles/panel = SubResource( 6 )

[node name="HBx" type="HBoxContainer" parent="PanelFileMapNameOpened"]
margin_left = 5.0
margin_top = 5.0
margin_right = 143.0
margin_bottom = 29.0

[node name="Icon" type="TextureRect" parent="PanelFileMapNameOpened/HBx"]
margin_right = 24.0
margin_bottom = 24.0
texture = ExtResource( 10 )

[node name="Lbl" type="Label" parent="PanelFileMapNameOpened/HBx"]
margin_left = 28.0
margin_top = 5.0
margin_right = 138.0
margin_bottom = 19.0
grow_horizontal = 0
size_flags_horizontal = 3
text = "FilenameOpened"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="LabelTooltipLinkMode" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 102.0
margin_bottom = 34.0

[node name="FormSceneData" parent="." instance=ExtResource( 2 )]
visible = false

[node name="FileDialogSaveMap" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -324.0
margin_top = -202.0
margin_right = 324.0
margin_bottom = 202.0
window_title = "Save Map"
filters = PoolStringArray( "*.lvlmap ; Level Map" )

[node name="FileDialogOpenMap" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.0
margin_top = -172.0
margin_right = 302.0
margin_bottom = 172.0
window_title = "Open a File"
mode = 0
filters = PoolStringArray( "*.lvlmap ; Level Map" )

[node name="PopupAbout" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BtnCloseAbout" type="Button" parent="PopupAbout"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 7 )

[node name="Panel" type="Panel" parent="PopupAbout"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -206.0
margin_right = 328.0
margin_bottom = 206.0
custom_styles/panel = SubResource( 9 )

[node name="MarginContainer" type="MarginContainer" parent="PopupAbout/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PopupAbout/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 636.0
margin_bottom = 392.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_right = 616.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 12 )
text = "GameLevels Blueprint"
align = 1

[node name="HSeparator" type="HSeparator" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 616.0
margin_bottom = 62.0

[node name="Label2" type="Label" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 616.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 11 )
text = "made by Danny Garay"
align = 1

[node name="Label3" type="Label" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 616.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 11 )
text = "dannygaray60@gmail.com"
align = 1

[node name="HSeparator2" type="HSeparator" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 616.0
margin_bottom = 138.0

[node name="Label4" type="Label" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 616.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 11 )
text = "icons by svgrepo.com"
align = 1

[node name="VSplitContainer" type="VSplitContainer" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 616.0
margin_bottom = 215.0
size_flags_vertical = 3

[node name="BtnWebsite" type="Button" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_left = 210.0
margin_top = 221.0
margin_right = 405.0
margin_bottom = 253.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 4
text = " dannygaray60.github.io "
icon = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 259.0
margin_right = 616.0
margin_bottom = 290.0
custom_constants/separation = 6

[node name="BtnDonation" type="Button" parent="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 201.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Make a Donation"
icon = ExtResource( 15 )

[node name="BtnHowToUse" type="Button" parent="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 207.0
margin_right = 408.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "How to Use"
icon = ExtResource( 8 )

[node name="BtnGithubRepo" type="Button" parent="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 414.0
margin_right = 616.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "Github Repo"
icon = ExtResource( 14 )

[node name="VSplitContainer2" type="VSplitContainer" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 616.0
margin_bottom = 334.0
size_flags_vertical = 3

[node name="BtnAccept" type="Button" parent="PopupAbout/Panel/MarginContainer/VBoxContainer"]
margin_top = 340.0
margin_right = 616.0
margin_bottom = 372.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
text = "Accept"

[node name="TimerHideNotif" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="RecenListControl" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="ColorRect" parent="RecenListControl"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.45098 )

[node name="PanelContainer" type="PanelContainer" parent="RecenListControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -136.0
margin_right = 245.0
margin_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
custom_styles/panel = SubResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="RecenListControl/PanelContainer"]
margin_left = 1.0
margin_top = 1.0
margin_right = 489.0
margin_bottom = 271.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="RecenListControl/PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 478.0
margin_bottom = 260.0

[node name="HBoxContainer" type="HBoxContainer" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 468.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 428.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Recent List"

[node name="BtnCloseRecenList" type="Button" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 432.0
margin_right = 468.0
margin_bottom = 20.0
custom_styles/focus = SubResource( 11 )
text = "  X  "
flat = true

[node name="HSeparator" type="HSeparator" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 468.0
margin_bottom = 40.0
custom_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 468.0
margin_bottom = 250.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBxRecentFiles" type="VBoxContainer" parent="RecenListControl/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 468.0
margin_bottom = 206.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxMapFile/BtnAbout" to="." method="_on_BtnAbout_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxMapFile/BtnOpenRecentFiles" to="." method="_on_BtnOpenRecentFiles_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxMapFile/BtnOpen" to="." method="_on_BtnOpen_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxMapFile/BtnSave" to="." method="_on_BtnSave_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxMapFile/BtnClose" to="." method="_on_BtnClose_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxActions/BtnLink" to="." method="_on_BtnLink_pressed"]
[connection signal="pressed" from="PanelToolBar/MarginContainer/HBx/HBxActions/BtnCancelLink" to="." method="_on_BtnCancelLink_pressed"]
[connection signal="scene_dropped" from="GraphEdit" to="." method="_on_GraphEdit_scene_dropped"]
[connection signal="file_selected" from="FileDialogSaveMap" to="." method="_on_FileDialogSaveMap_file_selected"]
[connection signal="file_selected" from="FileDialogOpenMap" to="." method="_on_FileDialogOpenMap_file_selected"]
[connection signal="pressed" from="PopupAbout/BtnCloseAbout" to="." method="_on_BtnCloseAbout_pressed"]
[connection signal="pressed" from="PopupAbout/Panel/MarginContainer/VBoxContainer/BtnWebsite" to="." method="_on_BtnWebsite_pressed"]
[connection signal="pressed" from="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer/BtnDonation" to="." method="_on_BtnDonation_pressed"]
[connection signal="pressed" from="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer/BtnHowToUse" to="." method="_on_BtnHowToUse_pressed"]
[connection signal="pressed" from="PopupAbout/Panel/MarginContainer/VBoxContainer/HBoxContainer/BtnGithubRepo" to="." method="_on_BtnGithubRepo_pressed"]
[connection signal="pressed" from="PopupAbout/Panel/MarginContainer/VBoxContainer/BtnAccept" to="." method="_on_BtnCloseAbout_pressed"]
[connection signal="timeout" from="TimerHideNotif" to="." method="_on_TimerHideNotif_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="RecenListControl/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BtnCloseRecenList" to="." method="_on_BtnCloseRecenList_pressed"]
